# provider_fictional_hw

./: README.md  pyproject.toml
provider_fictional_hw/: __init__.py  plugin.py
